--- a/l14_jest_in_react/src/containers/TodoList/style.css
+++ b/l14_jest_in_react/src/containers/TodoList/style.css
@@ -25,3 +25,53 @@
   border-radius: 5px;
   padding: 0 10px;
 }
+
+.undo-list {
+  margin: 0 auto;
+  width: 600px;
+}
+
+.undo-list-title {
+  margin: 10px 0;
+  line-height: 30px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.undo-list-count {
+  float: right;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  text-align: center;
+  background-color: #e6e6ea;
+  border-radius: 50%;
+}
+
+.undo-list-content {
+  list-style-type: none;
+}
+
+.undo-list-item {
+  line-height: 32px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  background-color: #FFF;
+  border-left: 3px solid #629a9c;
+  text-indent: 10px;
+  border-radius: 3px;
+}
+
+.undo-list-remove {
+  float: right;
+  margin-top: 6px;
+  margin-right: 6px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  background-color: #e6e6ea;
+  text-indent: 0;
+  border-radius: 50%;
+}
